2017-02-21  Christian Fischer  <christian.fischer@greenbone.net>

	* src/pluginscheduler.c (plugin_next_unrun_dependency):
	Use g_message if a dependency cycle is detected as this
	is a serve issue which needs to always show up in the logs.

2017-02-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/arglists.c, misc/arglists.h: Remove files.

	* misc/CMakeLists.txt: Don't build arglists.c

	* COPYING: Remove arglists.* entries.

	* misc/plugutils.c (ARG_STRING, ARG_INT): New defines.

	* nasl/nasl.h, nasl/nasl_builtin_find_service.c,
	nasl/nasl_builtin_nmap.c, nasl/nasl_builtin_openvas_tcp_scanner.c,
	nasl/nasl_builtin_synscan.c, nasl/nasl_debug.c, nasl/nasl_misc_funcs.c,
	nasl/nasl_scanner_glue.c: Remove arglists.h include.

2017-02-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_builtin_plugins.h, nasl/nasl_cert.c, nasl/nasl_cert.h,
	nasl/nasl_isotime.c, nasl/nasl_isotime.h, nasl/nasl_snmp.c,
	nasl/nasl_snmp.h, nasl/nasl_socket.c, nasl/nasl_ssh.c,
	nasl/nasl_ssh.h: Replace in the description openvas-libraries/nasl
	with openvas-scanner/nasl.

	* src/attack.c (nvti_category_is_safe): In a comment, replace
	openvas-libraries with openvas-scanner/nasl.

	* misc/scanneraux.h, misc/support.h: Replace in the description
	openvas-libraries/misc with openvas-scanner/misc.

	* misc/ids_send.c (injecet, injectv6): Replace in perror messages
	openvas-libraries with openvas-scanner.

2017-02-20  Michael Wiegand <michael.wiegand@greenbone.net>

	* COPYING: Add licenses for 'misc/' subdirectory.

2017-02-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/scanneraux.h (struct script_infos): New struct.

	* misc/ids_send.c, misc/ids_send.h, misc/network.c, misc/network.h,
	misc/plugutils.c, misc/plugutils.h, misc/www_funcs.c, misc/www_funcs.h,
	nasl/exec.c, nasl/nasl-lint.c, nasl/nasl.c, nasl/nasl.h,
	nasl/nasl_builtin_find_service.c, nasl/nasl_builtin_nmap.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl_builtin_synscan.c,